src/_prefs.less
@import "_variables.less";

body.ttrss_prefs {
  :is(h1, h2, h3, h4) {
    margin-top: 60px;

    + :is(h1, h2, h3, h4) {
      margin-top: 20px;
    }
  }
  h2 {
    padding-bottom: 4px;
    border: 0 solid @border-darker;
    border-width: 0 0 1px;
  }

  // qr code for authenticator
  img[src^="data:image/png"] {
    background-color: #fff;
  }

  #header {
    display: flex;
    align-items: center;
    margin-top: 1px;
    padding: 0;

    > a {
      display: inline-flex;
      gap: 4px;
      margin-left: 8px;
      padding: 6px 16px;
      transition: background-color 0.2s;
      border: 1px solid transparent;
      color: @default-text;
      font-size: @font-size-content;
      text-decoration: none;

      &::before {
        content: "exit_to_app";
        color: @color-accent;
        font-family: "Material Icons";
        font-size: 18px;
        line-height: 1;
      }
    }
  }
  #footer#footer {
    &,
    a {
      color: @fg-text-muted;
    }
  }

  // ---------------------------------------------------------------------------
  // mobile styling
  // ---------------------------------------------------------------------------
  .media(0, lg, {
    // remove header icons, text from prefs exit button, main top tabs and feeds left tabs
    :is(#header > a, #header > i, #pref-tabs_tablist .tabLabel, .dijitTabContainerLeft-tabs .tabLabel) {
      gap: 0;
      font-size: 0;
    }
  });
  .media(0, md, {
    @checkbox-indent: 30px;

    // general preferences
    fieldset.prefs {
      display: flex;
      flex-wrap: wrap;

      textarea {
        max-width: 85vw;
      }
      // try to keep help text to the right of inputs but stretch it to available space
      .help-text {
        flex: 1;
      }
      // force to be in first row only together with checkbox
      label:first-of-type {
        flex-basis: calc(100% - @checkbox-indent);
        margin-right: 0;
        min-width: 0;

        // pull checkboxes before the label
        + .dijitCheckBox {
          order: -1;
          margin-right: 11px; // add 10px to default margin of 1px

          // align start of help-text with checkbox label
          ~ .help-text {
            margin: 4px 0 4px @checkbox-indent;
          }
          // push  preview digest  button to the end
          + .dijitButton {
            order: 1;
          }
        }
      }
    }
    // plugins
    ul.prefs-plugin-list {
      li {
        line-height: unset;
        justify-content: space-between;

        label.checkbox {
          flex-wrap: wrap;
          gap: 0;
          padding-left: 0;

          .name {
            min-width: 0 !important;
            margin-inline: 10px 0;
            text-align: left;
          }
          .description {
            flex-basis: 100%;
            margin: 4px 0 4px @checkbox-indent;
          }
        }
        .actions {
          display: flex;
          flex-grow: 0;
          padding-right: 0;
        }
      }
    }
  });

  // ---------------------------------------------------------------------------
  // visual fixes
  // ---------------------------------------------------------------------------
  // some icons rendered too wide in top tabs
  .tabLabel .material-icons {
    width: 18px;
    vertical-align: top;
  }
  // broken focus outline of buttons in plugin installer
  .plugin-installer-list li > .dijitButton {
    margin-top: 8px;
    padding: 0;
  }
  // my feeds: missing spacing on right text
  .feedParam {
    margin-right: 16px;
    opacity: unit((@fade6 / @fade8));
    font-size: 0.857em;
  }
  // preferences > personal > app passwords
  #app_passwords_holder .dijitToolbar {
    margin: 0 0 8px;
  }
  // preferences > preferences main tab content
  #prefsTab #dijit_layout_AccordionPane_1 {
    padding: 0;
  }
  // re-add language selector margin removed via inline style
  label[for="CB_USER_LANGUAGE"] + .dijitSelect {
    margin: 4px 4px 4px 0 !important;
  }
  fieldset.prefs {
    .help-text-bottom {
      margin-top: 0;
    }
  }
  ul.prefs-plugin-list li {
    line-height: unset;
  }

  // ---------------------------------------------------------------------------
  // phpinfo
  // ---------------------------------------------------------------------------
  .phpinfo {
    img {
      display: block;
      background-color: transparent;
    }
    // colored text for syntax highlighting
    font {
      padding: 0 5px;
      border-radius: 4px;
      background-color: #fff;
    }
    a:not([href]) {
      color: inherit;
      text-decoration: none;
    }
    :is(h1, h2, table) {
      margin-bottom: 20px;
    }
    :is(h1, h2) {
      padding-left: 12px;
    }
    table :is(h1, h2) {
      padding-left: 0;
    }
    h1 {
      font-size: 2em;
    }
    h2 {
      padding-block: 50px 0;
      border-width: 1px 0 0;
      font-size: 1.414em;
    }
    &.phpinfo :is(th, td) {
      padding: 8px 12px;
      border-color: @color-fade2;
      vertical-align: top;
    }
    .p {
      margin: 1em 0;
      font: inherit;
      letter-spacing: 0;
      text-transform: none;
    }
    :is(.p, .v) {
      color: @color-fade7;
    }
    td.v {
      font-family: @fonts-mono;
      font-size: 0.857em;
      line-height: 1.333;
    }
  }

  // ---------------------------------------------------------------------------
  // plugins
  // ---------------------------------------------------------------------------
  // plugin "effective config"
  #config-items-list {
    :is(th, td) {
      padding: 8px 12px;
    }
    :is(tr:hover, td.gray) {
      background-color: @color-fade2;
    }
    th,
    td:not(:last-child) {
      border-color: @border-darker;
    }
    :is(.envvar_prefix, td.redacted) {
      opacity: 1;
      color: @color-fade5;
    }
  }
}

